Changes for 1.3:

 - fixed agent crash while evaluating proc.mem[] (Alexei)
 - changed type of lastlogsize to long in structure METRIC (Alexei)
 - ZABBIX agent to bind even if TIME_WAIT sockets exist (Alexei)
 - ZABBIX server to bind even if TIME_WAIT sockets exist (Alexei)
 - fixed notification report for Oracle (Eugene)
 - fixed large history of alarms displaying (Eugene)
 - fixed value mapping for latest data (Eugene)
 - fixed value mapping for screens (Eugene)

Changes for 1.1:

 - timeout for sending emails and SMS was increased to 20 seconds (Alexei)
 - fixed text history storing for Oracle (Eugene)
 - fixes in Oracle schema (Alexei)
 - fixed syntax in snmptrap.sh (Alexei)
 - fixed EventLog for Win32 ZABBIX agent, thanks to "bcheese" (Eugene)
 - developed aggrgated graphs (Eugene)
 - improved graphs, added selector of data calculation function (Eugene)
 - fixed popup of trigger selection (Eugene)

Changes for 1.1beta12:

 - added support of serial GSM modems for SMS (Alexei)
 - fixed SQL requests escaping for oracle server (Eugene)
 - support of web.page.regexp[] (Alexei)
 - support of web.page.perf[] (Alexei)
 - support of web.page.get[] (Alexei)
 - added whitespaces stripping (Eugene)
 - improved "system.run[]" key, added <wait>|<nowait> mode (Eugene)
 - added support of "system.cpu.util[]" key for HPUX (Eugene)
 - added support of "proc.num[]" key for AIX 4.x (Eugene)
 - added support of value type Text (Alexei) 
 - fixed "Server info" screen item (Eugene)
 - fixed "Host info" screen item (Eugene)
 - fixed "Trigger info" screen item (Eugene)
 - dropped suport of delays between actions due to bad design (Alexei)
 - fixed incorrect handling of actions (Alexei)
 - fixed bad performance of previous beta because of wrong DBselectN() (Alexei)
 - added support for direct sending of SMS via GSM modem (Alexei)
 - fixed syncing of graphs with templates (Alexei)
 - fixed typo in MySQL's schema.sql (Alexei)